<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scrapbook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="i1">Riga – Paris of Latvia</string>
    <string name="i2">Kachidoki bridge ,  Tokyo</string>
    <string name="i3">Clyde Audirtorium Glasgow,Scotland</string>
    <string name="i4">The Jefferson Memorial,Washington DC</string>
    <string name="i1desc">Image of Riga ,Paris of Latvia</string>
    <string name="i2desc">Image of Kachidoki bridge , Tokyo</string>
	<string name="i3desc">Image of Clyde Audirtorium Glasgow,Scotland</string>
    <string name="i4desc">Image of The Jefferson Memorial,Washington DC</string>
</resources>
