<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mine.scrapbook.MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="190dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView1"
        android:contentDescription="@string/i2desc"
        android:src="@drawable/image2" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="140dp"
        android:layout_height="190dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/i1desc"
        android:src="@drawable/image1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginBottom="22dp"
        android:text="@string/i1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="140dp"
        android:layout_height="190dp"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/i3desc"
        android:src="@drawable/image3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="140dp"
        android:layout_height="190dp"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignTop="@+id/imageView3"
        android:contentDescription="@string/i4desc"
        android:src="@drawable/image4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/imageView2"
        android:text="@string/i2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignRight="@+id/imageView3"
        android:text="@string/i3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/imageView4"
        android:text="@string/i4" />

</RelativeLayout>
